08_Networking/08-06-02_NetPol_Pod/db01-allow-netpol.yaml
# Exercise 37-02 v3.3.0
#
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db01-netpol
  namespace: db-ns
spec:
  podSelector:
    matchLabels:
      tier: database
  policyTypes:
    - Ingress
    - Egress
  ingress: 
    - from:
      - podSelector:
          matchLabels:
            tier: backend
      ports:
        - protocol: TCP
          port: 6379
  egress:
    - to:
      - podSelector:
          matchLabels:
            tier: backend
      ports:
        - protocol: TCP
          port: 80
